--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
@@ -11,9 +11,49 @@
   min-height: 95px;
 }
 
+.col-7 {
+  border: solid 1px #f2f2f2;
+  padding-top: 20px;
+  border-radius: 4px;
+  margin-top: 32px;
+
+  h5 {
+    margin-top: -30px;
+    margin-bottom: 30px;
+
+    span {
+      background: white;
+      padding: 0 3px;
+    }
+  }
+}
+
+.col {
+
+  p {
+    text-align: center;
+    color: grey;
+  }
+}
+
+mat-slider {
+  margin-left: -6px;
+  width: 100%;
+}
+
+.buy-amount {
+  padding: 0 1rem 0 1rem;
+  color: lightgray;
+  margin-bottom: -21px;
+}
+
+.price {
+
+}
+
 .wallet-list,
 .bank-list {
-  //max-height: 700px;
+  height: 600px;
   overflow: auto;
 }
 
@@ -26,6 +66,7 @@ h5 {
 
 .wallet-item,
 .bank-item {
+  border: solid 1px transparent;
   padding: .5rem;
   margin: .3rem .1rem;
   border-radius: 3px;
@@ -45,20 +86,36 @@ h5 {
     }
   
     .sum {
+      display: block;
+      padding-left: 5px;
       font-size: .7rem;
-      color: #536c79;
+      color: hsla(201, 19%, 70%, 1);
     }
   }
 
   &:hover {
-    background:#f0f3f5;
+    background: #f9f9f9;
     cursor: pointer;
+    box-shadow: 0 1px #FFFFFF inset, 0 4px 11px rgba(34, 25, 25, 0.2);
+    transition: 200ms ease-in;
+    transform: translateY(-1px);
   }
 
   &:active,
   &.selected {
-    background:#a4b7c1;
+    background: #f3f3f3;
     box-shadow: none;
+    //border: solid 1px #e1e1e1;
+  }
+
+  &.disabled {
+    box-shadow: none;
+
+    &:hover {
+      background: white;
+      transform: none;
+      cursor: default;
+    }
   }
 }
 
@@ -77,6 +134,24 @@ h5 {
     display: flex;
     align-items: center;
     padding: 1rem 0;
+
+    span {
+      background: white;
+      border: solid 1px #f2f2f2;
+      padding: 2px 6px;
+      border-radius: 20px;
+      z-index: 1;
+      color: #b5b5b5;
+    }
+
+    &::before {
+      border-left: solid 1px #f2f2f2;
+      content: ".";
+      color: white;
+      height: 100%;
+      transform: translateX(17px);
+      z-index: 0;
+    }
   }
 }
 
@@ -101,15 +176,16 @@ h5 {
     input:disabled {
       border: 0;
       text-align: center;
-      font-size: 20px;
+      font-size: 15px;
       color: #3e515b;
-      width: 100px;
       background-color: #FFF;
   
     }
     
     .title {
-      font-size: 20px;
+      font-size: 15px;
+    color: #6d6d6d;
+    font-weight: bold;
     }
   }
 
