--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
@@ -174,6 +174,7 @@ h5 {
 
     input,
     input:disabled {
+      width: 100%;
       border: 0;
       text-align: center;
       font-size: 15px;
