--- a/web/coinsim/frontend/src/src/app/views/market/market.component.html
+++ b/web/coinsim/frontend/src/src/app/views/market/market.component.html
@@ -16,7 +16,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let currency of marketModel" [routerLink]="[currency.NAME]">
-            
+
             <td class={{currency.NAMEFLASH}}>
               <p>
                 <img src="assets/img/crypto-icons/{{currency.NAME | lowercase}}.png" />{{nameObject[currency.NAME].name}}
@@ -26,12 +26,12 @@
             <td class={{currency.MKTCAPFLASH}}>{{currency.USD.MKTCAP | number : '1.0-0'}} $</td>
             <td class={{currency.VOLUME24HOURFLASH}}>{{currency.USD.VOLUME24HOUR | number : '1.2-2'}} $</td>
             <td class={{currency.SUPPLYFLASH}}>{{currency.USD.SUPPLY | number : '1.0-0'}} $</td>
-            <td>Pricegraph <td>
+            <td><app-price-sparklines></app-price-sparklines><td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
-  
-    
+
+
 </ng-template>
