--- a/web/coinsim/frontend/src/src/app/views/market-detail/detail.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/market-detail/detail.component.scss
@@ -1,10 +1,4 @@
-.btn {
-  display: none;
-}
 
-a {
-  display: none !important;
-}
 
 .row i {
     font-size: 25px;
@@ -52,6 +46,10 @@ a {
       border: 1px solid #8cc63f;
       cursor: pointer;
       color: #fff;
+    }
+
+    a.btn {
+      display: none;
     }
   }
 }
