--- a/web/coinsim/frontend/src/src/app/views/history/history.component.html
+++ b/web/coinsim/frontend/src/src/app/views/history/history.component.html
@@ -1,8 +1,12 @@
 <div class="animated fadeIn">
-	<div class="container mb-3 p-3 bg-white">
-		<app-market-price></app-market-price>
-	</div>
-    <div class="container p-3 bg-white">
-		<app-history-table></app-history-table>
+	<!-- <div class="card mb-3 bg-white">
+		<div class="card-body">
+			<app-market-price></app-market-price>
+		</div>
+	</div> -->
+    <div class="card bg-white">
+		<div class="card-body">
+				<app-history-table></app-history-table>
+		</div>
     </div>
   </div>
